Fix overlapping shape

--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ p {
 }
 
 .arc {
-  bottom: 20%;
+  bottom: 10%;
   left: 5%;
   width: 50px;
   height: 50px;
